@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: regexp.test,v 1.10 2009/10/01 02:31:57 mdejong Exp $
+# RCS: @(#) $Id: regexp.test,v 1.12 2009/10/04 20:50:05 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -317,28 +317,28 @@ test regexp-7.20 {basic regsub replacement} {
 test regexp-7.21 {basic regsub replacement} {
     list [regsub a+ aaa {\\\&} foo] $foo
 } {1 {\&}}
-test regexp-7.22 {basic regsub backslash replacement} {
+test regexp-7.22 {basic regsub replacement} {
     list [regsub a+ aaa {\0} foo] $foo
 } {1 aaa}
-test regexp-7.23 {basic regsub backslash replacement} {
+test regexp-7.23 {basic regsub replacement} {
     list [regsub a+ aaa {\\0} foo] $foo
 } {1 {\0}}
-test regexp-7.24 {basic regsub backslash replacement} {
+test regexp-7.24 {basic regsub replacement} {
     list [regsub a+ aaa {\\\0} foo] $foo
 } {1 {\aaa}}
-test regexp-7.25 {basic regsub backslash replacement} {
+test regexp-7.25 {basic regsub replacement} {
     list [regsub a+ aaa {\\\\0} foo] $foo
 } {1 {\\0}}
-test regexp-7.26 {Java regexp characters must be escaped} {
+test regexp-7.26 {dollar zero is not a backslash replacement} {
     list [regsub a+ aaa {$0} foo] $foo
 } {1 {$0}}
-test regexp-7.27 {Java regexp characters must be escaped} {
+test regexp-7.27 {dollar zero is not a backslash replacement} {
     list [regsub a+ aaa {\0$0} foo] $foo
 } {1 {aaa$0}}
-test regexp-7.28 {Java regexp characters must be escaped} {
+test regexp-7.28 {dollar zero is not a backslash replacement} {
     list [regsub a+ aaa {\$0} foo] $foo
 } {1 {\$0}}
-test regexp-7.29 {Java regexp characters must be escaped} {
+test regexp-7.29 {dollar zero is not a backslash replacement} {
     list [regsub a+ aaa {\\} foo] $foo
 } {1 \\}
 
@@ -465,10 +465,8 @@ test regexp-12.1 {Tcl_RegExpExec: large number of subexpressions} {macCrash} {
 } {1 abcdefghijklmnopqrstuvwxyz a b c d e f g h i j k l m n o p q r s t u v w x y z}
 
 test regexp-13.1 {regsub of a very large string} {
-    # This test is designed to stress the memory subsystem in order
-    # to catch Bug #933.  It only fails if the Tcl memory allocator
-    # is in use.
-
+    # This test is designed to stress the memory subsystem in order to catch
+    # Bug #933.  It only fails if the Tcl memory allocator is in use.
     set line {BEGIN_TABLE ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; END_TABLE}
     set filedata [string repeat $line 200]
     for {set i 1} {$i<10} {incr i} {
@@ -534,7 +532,21 @@ test regexp-15.5 {regexp -start, over end of string} {
 test regexp-15.6 {regexp -start, loss of ^$ behavior} {
     list [regexp -start 2 {^$} {}]
 } {0}
-test regexp-15.7 {regexp -start, over end of string} {
+test regexp-15.7 {regexp -start, double option} {
+    regexp -start 2 -start 0 a abc
+} 1
+test regexp-15.8 {regexp -start, double option} {
+    regexp -start 0 -start 2 a abc
+} 0
+test regexp-15.9 {regexp -start, end relative index} {endIndex} {
+    catch {unset x}
+    list [regexp -start end {\d} 1abc2de3 x] [info exists x]
+} {0 0}
+test regexp-15.10 {regexp -start, end relative index} {endIndex} {
+    catch {unset x}
+    list [regexp -start end-1 {\d} 1abc2de3 x] [info exists x] $x
+} {1 1 3}
+test regexp-15.11 {regexp -start, over end of string} {
     set x NA
     list [regexp -start 2 {.*} ab x] $x
 } {1 {}}
@@ -556,59 +568,71 @@ test regexp-16.4 {regsub -start, \A behavior} {
     lappend out [regsub -start 0 -all {\A(\w)} {abcde} {/\1} x] $x
     lappend out [regsub -start 2 -all {\A(\w)} {abcde} {/\1} x] $x
 } {5 /a/b/c/d/e 3 ab/c/d/e}
-test regexp-16.5 {regsub -start and -all} {
+test regexp-16.5 {regsub -start, double option} {
+    list [regsub -start 2 -start 0 a abc c x] $x
+} {1 cbc}
+test regexp-16.6 {regsub -start, double option} {
+    list [regsub -start 0 -start 2 a abc c x] $x
+} {0 abc}
+test regexp-16.7 {regexp -start, end relative index} {endIndex} {
+    list [regsub -start end a aaa b x] $x
+} {0 aaa}
+test regexp-16.8 {regexp -start, end relative index} {endIndex} {
+    list [regsub -start end-1 a aaa b x] $x
+} {1 aab}
+test regexp-16.9 {regsub -start and -all} {
     set foo {}
     list [regsub -start 0 -all x+ axxxbxx |&| foo] $foo
 } {2 a|xxx|b|xx|}
-test regexp-16.6 {regsub -start and -all} {
+test regexp-16.10 {regsub -start and -all} {
     set foo {}
     list [regsub -start 1 -all x+ axxxbxx |&| foo] $foo
 } {2 a|xxx|b|xx|}
-test regexp-16.7 {regsub -start and -all} {
+test regexp-16.11 {regsub -start and -all} {
     set foo {}
     list [regsub -start 4 -all x+ axxxbxx |&| foo] $foo
 } {1 axxxb|xx|}
-test regexp-16.8 {regsub -start} {
+test regexp-16.12 {regsub -start} {
     set foo {}
     list [regsub -start 4 x+ axxxbxx |&| foo] $foo
 } {1 axxxb|xx|}
-test regexp-16.9 {regsub -start and -all} {
+test regexp-16.13 {regsub -start and -all} {
     set foo {}
     list [regsub -start 1 -all a+ "" & foo] $foo
 } {0 {}}
-test regexp-16.10 {regsub -start} {
+test regexp-16.14 {regsub -start} {
     set foo {}
     list [regsub -start 1 a+ "" & foo] $foo
 } {0 {}}
-test regexp-16.11 {regsub -start and -all} {
+test regexp-16.15 {regsub -start and -all} {
     set foo {}
     list [regsub -start 2 -all a+ "xy" & foo] $foo
 } {0 xy}
-test regexp-16.12 {regsub -start} {
+test regexp-16.16 {regsub -start} {
     set foo {}
     list [regsub -start 2 a+ "xy" & foo] $foo
 } {0 xy}
-test regexp-16.13 {regsub -start and -all} {
+test regexp-16.17 {regsub -start and -all} {
     set foo {}
     list [regsub -start 1 -all y+ "xy" & foo] $foo
 } {1 xy}
-test regexp-16.14 {regsub -start} {
+test regexp-16.18 {regsub -start} {
     set foo {}
     list [regsub -start 1 y+ "xy" & foo] $foo
 } {1 xy}
-test regexp-16.15 {regsub -start} {
+test regexp-16.19 {regsub -start} {
     set foo {}
     list [regsub -start -1 a+ "" & foo] $foo
 } {0 {}}
-test regexp-16.16 {regsub -start, loss of ^$ behavior} {
+test regexp-16.20 {regsub -start, loss of ^$ behavior} {
     set foo NA
     list [regsub -start 1 {^$} {} & foo] $foo
 } {0 {}}
-test regexp-16.17 {regsub -start, loss of ^$ behavior} {
+test regexp-16.21 {regsub -start, loss of ^$ behavior} {
     set foo NA
     list [regsub -start 1 {^.*$} abc & foo] $foo
 } {0 abc}
-test regexp-16.18 {regsub -start, loss of ^$ behavior} {
+test regexp-16.22 {regsub -start, loss of ^$ behavior} {
     set foo NA
     list [regsub -all -start 1 {^.*$} abc & foo] $foo
 } {0 abc}
@@ -691,6 +715,12 @@ test regexp-19.1 {regsub null replacement} {
     list $result [string length $result]
 } "\0a\0hel\0a\0lo\0a\0 14"
 
+test regexp-19.2 {regsub null replacement} {
+    regsub -all {@} {@hel@lo@} "\0a\0" result
+    set expected "\0a\0hel\0a\0lo\0a\0"
+    string equal $result $expected
+} 1
+
 test regexp-20.1 {regsub shared object shimmering} {
     # Bug #461322
     set a abcdefghijklmnopqurstuvwxyz 
@@ -699,86 +729,70 @@ test regexp-20.1 {regsub shared object shimmering} {
     regsub $a $c $b d 
     list $d [string length $d] [string bytelength $d]
 } [list abcdefghijklmnopqurstuvwxyz0123456789 37 37]
+
+if {0} {
 test regexp-20.2 {regsub shared object shimmering with -about} {
     eval regexp -about abc
 } {0 {}}
+}
 
 test regexp-21.1 {regsub works with empty string} {
     regsub -- ^ {} foo
 } {foo}
-
 test regexp-21.2 {regsub works with empty string} {
     regsub -- \$ {} foo
 } {foo}
-
 test regexp-21.3 {regsub works with empty string offset} {
     regsub -start 0 -- ^ {} foo
 } {foo}
-
 test regexp-21.4 {regsub works with empty string offset} {
     regsub -start 0 -- \$ {} foo
 } {foo}
-
 test regexp-21.5 {regsub works with empty string offset} {
     regsub -start 3 -- \$ {123} foo
 } {123foo}
-
 test regexp-21.6 {regexp works with empty string} {
     regexp -- ^ {}
 } {1}
-
 test regexp-21.7 {regexp works with empty string} {
     regexp -start 0 -- ^ {}
 } {1}
-
 test regexp-21.8 {regexp works with empty string offset} {
     regexp -start 3 -- ^ {123}
 } {0}
-
 test regexp-21.9 {regexp works with empty string offset} {
     regexp -start 3 -- \$ {123}
 } {1}
-
 test regexp-21.10 {multiple matches handle newlines} {
     regsub -all -lineanchor -- {^#[^\n]*\n} "#one\n#two\n#three\n" foo\n
 } "foo\nfoo\nfoo\n"
-
 test regexp-21.11 {multiple matches handle newlines} {
     regsub -all -line -- ^ "a\nb\nc" \#
 } "\#a\n\#b\n\#c"
-
 test regexp-21.12 {multiple matches handle newlines} {
     regsub -all -line -- ^ "\n\n" \#
 } "\#\n\#\n\#"
-
 test regexp-21.13 {multiple matches handle newlines} {
     regexp -all -inline -indices -line -- ^ "a\nb\nc"
 } {{0 -1} {2 1} {4 3}}
-
 test regexp-21.14 {regsub works with empty string} {
     regsub -- ^ {} &
 } {}
-
 test regexp-21.15 {regsub works with empty string} {
     regsub -- ^ {} foo&
 } {foo}
-
 test regexp-21.16 {regsub works with empty string} {
     regsub -all -- ^ {} foo&
 } {foo}
-
 test regexp-21.17 {regsub works with empty string} {
     regsub -- ^ {} {foo\0}
 } {foo}
-
 test regexp-21.18 {regsub works with empty string} {
     regsub -- ^.* {} {foo$0}
 } {foo$0}
-
 test regexp-21.19 {regsub works with empty string} {
     regsub -- ^ {input} {}
 } {input}
-
 test regexp-21.20 {regsub works with empty string} {
     regsub -- x {} {foo}
 } {}
@@ -786,78 +800,254 @@ test regexp-21.20 {regsub works with empty string} {
 test regexp-22.1 {Bug 1810038} {
     regexp ($|^X)* {}
 } 1
+test regexp-22.2 {regexp compile and backrefs, Bug 1857126} {
+    regexp -- {([bc])\1} bb
+} 1
 
+test regexp-23.1 {regexp -all and -line} {
+    set string ""
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1}} {{0 -1}} {{0 -1}}}
+test regexp-23.2 {regexp -all and -line} {
+    set string "\n"
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1}} {{0 -1}} {{0 -1}}}
+test regexp-23.3 {regexp -all and -line} {
+    set string "\n\n"
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1} {1 0}} {{0 -1} {1 0}} {{0 -1} {1 0}}}
+test regexp-23.4 {regexp -all and -line} {
+    set string "a"
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^.*$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1}} {{0 0}} {{1 0}}}
+test regexp-23.5 {regexp -all and -line} {knownBug} {
+    set string "a\n"
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^.*$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1} {2 1}} {{0 0} {2 1}} {{1 0} {2 1}}}
+test regexp-23.6 {regexp -all and -line} {
+    set string "\na"
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^.*$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1} {1 0}} {{0 -1} {1 1}} {{0 -1} {2 1}}}
+test regexp-23.7 {regexp -all and -line} {knownBug} {
+    set string "ab\n"
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^.*$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1} {3 2}} {{0 1} {3 2}} {{2 1} {3 2}}}
+test regexp-23.8 {regexp -all and -line} {
+    set string "a\nb"
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^.*$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1} {2 1}} {{0 0} {2 2}} {{1 0} {3 2}}}
+test regexp-23.9 {regexp -all and -line} {knownBug} {
+    set string "a\nb\n"
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^.*$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1} {2 1} {4 3}} {{0 0} {2 2} {4 3}} {{1 0} {3 2} {4 3}}}
+test regexp-23.10 {regexp -all and -line} {
+    set string "a\nb\nc"
+    list \
+	[regexp -all -inline -indices -line -- {^} $string] \
+	[regexp -all -inline -indices -line -- {^.*$} $string] \
+	[regexp -all -inline -indices -line -- {$} $string]
+} {{{0 -1} {2 1} {4 3}} {{0 0} {2 2} {4 4}} {{1 0} {3 2} {5 4}}}
+test regexp-23.11 {regexp -all and -line} {
+    regexp -all -inline -indices -line -- {b} "abb\nb"
+} {{1 1} {2 2} {4 4}}
 
-test regexp-23.1 {regsub -line} {
-    regsub -- x {} {foo}
-} {}
+test regexp-24.1 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string ""
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} {1 <> 1 <> 1 <>}
+test regexp-24.2 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string "\n"
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} [list 2 "<>\n<>" 2 "<>\n<>" 2 "<>\n<>"]
+test regexp-24.3 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string "\n\n"
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} [list 3 "<>\n<>\n<>" 3 "<>\n<>\n<>" 3 "<>\n<>\n<>"]
+test regexp-24.4 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string "a"
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^.*$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} [list 1 "<>a" 1 "<a>" 1 "a<>"]
+test regexp-24.5 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string "a\n"
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^.*$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} [list 2 "<>a\n<>" 2 "<a>\n<>" 2 "a<>\n<>"]
+test regexp-24.6 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string "\na"
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^.*$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} [list 2 "<>\n<>a" 2 "<>\n<a>" 2 "<>\na<>"]
+test regexp-24.7 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string "ab\n"
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^.*$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} [list 2 "<>ab\n<>" 2 "<ab>\n<>" 2 "ab<>\n<>"]
+test regexp-24.8 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string "a\nb"
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^.*$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} [list 2 "<>a\n<>b" 2 "<a>\n<b>" 2 "a<>\nb<>"]
+test regexp-24.9 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string "a\nb\n"
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^.*$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} [list 3 "<>a\n<>b\n<>" 3 "<a>\n<b>\n<>" 3 "a<>\nb<>\n<>"]
+test regexp-24.10 {regsub -all and -line} {
+    foreach {v1 v2 v3} {{} {} {}} {}
+    set string "a\nb\nc"
+    list \
+	[regsub -line -all {^} $string {<&>} v1] $v1 \
+	[regsub -line -all {^.*$} $string {<&>} v2] $v2 \
+	[regsub -line -all {$} $string {<&>} v3] $v3
+} [list 3 "<>a\n<>b\n<>c" 3 "<a>\n<b>\n<c>" 3 "a<>\nb<>\nc<>"]
+test regexp-24.11 {regsub -all and -line} {
+    regsub -line -all {b} "abb\nb" {<&>}
+} "a<b><b>\n<b>"
 
-test regexp-24.1 {regexp without -line option} {
+test regexp-25.1 {regexp without -line option} {
     set foo ""
     list [regexp {a.*b} "dabc\naxyb\n" foo] $foo
 } [list 1 abc\naxyb]
-
-test regexp-24.2 {regexp without -line option} {
+test regexp-25.2 {regexp without -line option} {
     set foo ""
     list [regexp {^a.*b$} "dabc\naxyb\n" foo] $foo
 } {0 {}}
-
-test regexp-24.3 {regexp with -line option} {
+test regexp-25.3 {regexp with -line option} {
     set foo ""
     list [regexp -line {^a.*b$} "dabc\naxyb\n" foo] $foo
 } {1 axyb}
-
-test regexp-24.4 {regexp with -line option} {
+test regexp-25.4 {regexp with -line option} {
     set foo ""
     list [regexp -line {^a.*b$} "dabc\naxyb\nxb" foo] $foo
 } {1 axyb}
-
-test regexp-24.5 {regexp without -line option} {
+test regexp-25.5 {regexp without -line option} {
     set foo ""
     list [regexp {^a.*b$} "dabc\naxyb\nxb" foo] $foo
 } {0 {}}
-
-test regexp-24.6 {regexp without -line option} {
+test regexp-25.6 {regexp without -line option} {
     set foo ""
     list [regexp {a.*b$} "dabc\naxyb\nxb" foo] $foo
 } "1 {abc\naxyb\nxb}"
-
-test regexp-24.7 {regexp with -lineanchor option} {
+test regexp-25.7 {regexp with -lineanchor option} {
     set foo ""
     list [regexp -lineanchor {^a.*b$} "dabc\naxyb\nxb" foo] $foo
 } "1 {axyb\nxb}"
-
-test regexp-24.8 {regexp with -lineanchor and -linestop option} {
+test regexp-25.8 {regexp with -lineanchor and -linestop option} {
     set foo ""
     list [regexp -lineanchor -linestop {^a.*b$} "dabc\naxyb\nxb" foo] $foo
 } {1 axyb}
-
-test regexp-24.9 {regexp with -linestop option} {
+test regexp-25.9 {regexp with -linestop option} {
     set foo ""
     list [regexp -linestop {a.*b} "ab\naxyb\nxb" foo] $foo
 } {1 ab}
 
-# Does -linestop flag control [] subexpression in addition to the .
-# rules? Not clear if this is tested anywhere.
-
-# FIXME: The regexp embedded flag expression option
-# in Java don't match the Tcl ones. Unclear how these
-# can be made to match. Should each be rewritten?
-
+test regexp-26.1 {matches start of line 1 time} {
+    regexp -all -inline -- {^a+} "aab\naaa"
+} {aa}
+test regexp-26.2 {matches start of line(s) 2 times} {
+    regexp -all -inline -line -- {^a+} "aab\naaa"
+} {aa aaa}
+test regexp-26.3 {effect of -line -all and -start} {
+    list \
+	[regexp -all -inline -line -start 0 -- {^a+} "aab\naaa"] \
+	[regexp -all -inline -line -start 1 -- {^a+} "aab\naaa"] \
+	[regexp -all -inline -line -start 3 -- {^a+} "aab\naaa"] \
+	[regexp -all -inline -line -start 4 -- {^a+} "aab\naaa"] \
+} {{aa aaa} aaa aaa aaa}
+# No regexp-26.4
+test regexp-26.5 {match length 0, match length 1} {
+    regexp -all -inline -line -- {^b*} "a\nb"
+} {{} b}
+test regexp-26.6 {non reporting capture group} {
+    regexp -all -inline -line -- {^(?:a+|b)} "aab\naaa"
+} {aa aaa}
+test regexp-26.7 {Tcl bug 2826551: -line sensitive regexp and -start} {
+    set match1 {}
+    set match2 {}
+    list \
+	[regexp -start 0 -indices -line {^a} "\nab" match1] $match1 \
+	[regexp -start 1 -indices -line {^a} "\nab" match2] $match2
+} {1 {1 1} 1 {1 1}}
+test regexp-26.8 {Tcl bug 2826551: diff regexp with -line option} {
+    set data "@1\n2\n+3\n@4\n-5\n+6\n7\n@8\n9\n"
+    regexp -all -inline -line {^@.*\n(?:[^@].*\n?)*} $data
+} [list "@1\n2\n+3\n" "@4\n-5\n+6\n7\n" "@8\n9\n"]
+test regexp-26.9 {Tcl bug 2826551: diff regexp with embedded -line option} {
+    set data "@1\n2\n+3\n@4\n-5\n+6\n7\n@8\n9\n"
+    regexp -all -inline {(?n)^@.*\n(?:[^@].*\n?)*} $data
+} [list "@1\n2\n+3\n" "@4\n-5\n+6\n7\n" "@8\n9\n"]
+test regexp-26.10 {regexp with -line option} {
+    regexp -all -inline -line -- {a*} "a\n"
+} {a {}}
+test regexp-26.11 {regexp without -line option} {
+    regexp -all -inline -- {a*} "a\n"
+} {a {}}
+test regexp-26.12 {regexp with -line option} {
+    regexp -all -inline -line -- {a*} "b\n"
+} {{} {}}
+test regexp-26.13 {regexp without -line option} {
+    regexp -all -inline -- {a*} "b\n"
+} {{} {}}
+
 # cleanup
 ::tcltest::cleanupTests
 return
-
-
-
-
-
-
-
-
-
-
-
-
-
 
